--- a/_index.html
+++ b/_index.html
@@ -207,7 +207,7 @@
         <a href="https://www.hogent.be">
             <img src="HOGENT_Logo_Pos_rgb.png" alt="HOGENT">
         </a>
-        <a href="mailto:bachelorproef@arnegovaerts.be"bachelorproef@arnegovaerts.be></a>
+        <a href="mailto:bachelorproef@arnegovaerts.be">bachelorproef@arnegovaerts.be></a>
     </footer>
 
     <script src="recorder.js"></script>
