--- a/_index.html
+++ b/_index.html
@@ -208,7 +208,7 @@
             <img src="HOGENT_Logo_Pos_rgb.png" alt="HOGENT">
         </a>
         <p></p>
-        <a href="mailto:bachelorproef@arnegovaerts.be">bachelorproef@arnegovaerts.be></a>
+        <a href="mailto:bachelorproef@arnegovaerts.be">bachelorproef@arnegovaerts.be</a>
     </footer>
 
     <script src="recorder.js"></script>
