--- a/_index.html
+++ b/_index.html
@@ -5,16 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Naar zee</title>
+    <title>Naar zee met ...</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="credits" href="/credits.txt">
+
+    <link rel="canonical" href="https://arnegovaerts.be">
+    <meta name="description" content="Naar zee met ... is een datatool die gebruikt wordt als deel van een bachelorproef toegepaste informatica.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@argovaerts">
+    <meta name="twitter:url" property="og:url" content="https://arnegovaerts.be">
+    <meta name="twitter:title" property="og:title" content="Naar zee met ...">
+    <meta name="twitter:description" property="og:description" content="Naar zee met ... is een datatool die gebruikt wordt als deel van een bachelorproef toegepaste informatica.">
+    <meta name="twitter:image" property="og:image" content="https://arnegovaerts.be/HOGENT_Logo_Pos_rgb.png">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://arnegovaerts.be"
+      },
+      "headline": "Naar zee met ...",
+      "description": "Bachelorproef HOGENT",
+      "image": "https://arnegovaerts.be/HOGENT_Logo_Pos_rgb.png",  
+      "author": {
+        "@type": "Person",
+        "name": "Arne Govaerts",
+        "url": "https://q4.re"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Hogeschool Gent",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://arnegovaerts.be/HOGENT_Logo_Pos_rgb.png"
+        }
+      },
+      "datePublished": "2022-02-06",
+      "dateModified": "2022-02-06"
+    }
+    </script>   
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="https://arnegovaerts.be/site.webmanifest">
     
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://unpkg.com/awsm.css/dist/awsm.min.css">
     <link rel="stylesheet" href="style.css">
     
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script defer src="https://unpkg.com/alpinejs@3.8.1/dist/cdn.min.js"></script>
 </head>
 
 <body x-data="{
