--- a/_index.html
+++ b/_index.html
@@ -117,6 +117,18 @@
         <h1>Naar zee met ...</h1>
     </header>
     <main>
+        <noscript>
+            <p>
+                Jammer genoeg werkt deze website enkel als met JavaScript aan. Sorry.
+            </p>
+            <p></p>
+        </noscript>
+        <article id="ie">
+            <p>
+                Jammer genoeg werkt deze website enkel een modere browser (bijvoorbeeld Firefox of Chrome). Sorry.
+            </p>
+            <p></p>
+        </article>
         <article x-show="tonen === 0">
             <p>
                 Hallo! In mijn bachelorproef toegepaste informatica bekijk ik of het mogelijk is dat
@@ -265,6 +277,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bowser@2.11.0/es5.min.js"></script>
     <script src="recorder.js"></script>
+    <script src="ie.js"></script>
 </body>
 
 </html>
