kleine aanpassing aan instructie

--- a/_index.html
+++ b/_index.html
@@ -225,8 +225,9 @@
         </article>
         <article x-cloak x-show="tonen === 2">
             <p>
-                Nu krijgt u twee scenario's. Bij elk van deze scenario's neemt u telkens een kort
-                geluidsfragment op. Dit mag een fictieve boodschap zijn.
+                Nu krijgt u twee scenario's. Bij elk van deze scenario's neemt u telkens een kort geluidsfragment op.
+                Dit mag een fictieve boodschap zijn en dient de vorm te hebben van een monoloog. Beeld je ook dat spreekt alsof
+                je naast de persoon staat tot wie je je richt.
             </p>
             <h2>
                 Scenario 1: Leeftijdsgenoot
